[tool.black]
line-length = 119
target-version = ["py39"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "diffusers-control-net-worker"
version = "0.1.0"
description = ""
authors = ["YoungJae Kim <corea_kyj@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
celery = "^5.2.7"
firebase-admin = "^6.1.0"
loguru = "^0.6.0"
torch = "^2.0.0"
diffusers = "^0.14.0"
opencv-python = "^4.7.0.72"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
